--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "bonly",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1"
+  }
 }
