--- a/config/storage.yml
+++ b/config/storage.yml
@@ -8,8 +8,8 @@ local:
 
 amazon:
   service: S3
-  access_key_id: AKIAIOPG37HDP7MJR2XA
-  secret_access_key: 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
+  access_key_id: ENV['AWS_ACCESS_KEY_ID'],
+  secret_access_key: ENV['AWS_SECRET_ACCESS_KEY'], 
   region: us-east-2
   bucket: bonly
 
